--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@types/react": "16.9.14",
     "@types/react-dom": "16.9.4",
     "@types/react-router-dom": "^5.1.3",
+    "antd": "^3.26.4",
     "node-sass": "^4.13.0",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
